참여자 1명->바로 낙찰 & 0명->유찰 완료